--- a/resources/css/test.css
+++ b/resources/css/test.css
@@ -75,3 +75,45 @@
 .home-card-order-btn-mua{
     margin-right: 40px;
 }
+
+.modal-message{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: flex;
+    z-index: 1;
+    justify-content: center;
+    align-items: center;
+}
+.message{
+    width: 480px;
+    background-color: rgba(196, 247, 108, 0.437);
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    animation: header__notifyGrowth ease 0.1s;
+}
+
+.message-content{
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: var(--text-color);
+}
+
+.layout__no-result{
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.no-result__message{
+    font-size: 1.4rem;
+    font-weight: 500;
+   
+    
+}
