--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -607,6 +607,9 @@
     padding-right: 16px;
     text-align: left;
 }
+.header__cart-item-link-name:hover .header__cart-item-name{
+    color: var(--primary-color);
+}
 .header__cart-item-price{
     font-size: 1.4rem;
     font-weight: 400;
@@ -875,7 +878,7 @@
 }
 
 
-.category-item--active .catogery-item__link{
+.category-item--active.catogery-item__link{
     color: var(--primary-color);
     
 }
@@ -1255,6 +1258,9 @@ i.home-product-item__like-icon-isset{
     color: var(--white-color);
     border: none;
     border-radius: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .infor-product__right-btn-buy:hover{
     background-color: rgb(254, 81, 81);
