--- a/resources/css/test.css
+++ b/resources/css/test.css
@@ -53,12 +53,7 @@
     font-size: 1.4rem;
     font-weight: 500;
 }
-.home-filter-information-receive-content-phone{ 
-    border: none;
-    height: 26px;
-    padding: 0 4px;
-    box-sizing: border-box;
-    border-radius: 6px;
+.home-filter-information-receive-content-phone{
     font-size: 1.4rem;
     font-weight: 500;
 }
@@ -68,13 +63,43 @@
     height: auto;
     padding: 10px;
     margin-right: 20px;
-    outline: none;
-    border: 1px solid rgb(192, 192, 192);
 
 }
-.home-card-order-btn-mua{
-    margin-right: 40px;
+.home-filter-information__change{
+    display: flex;
+    height: 100%;
+    width: 10%;
+    align-items: center;
+    
 }
+
+.home-filter-information__change>a{
+    font-size: 1.5rem;
+    color: var(--white-color);
+    border: 1px solid var(--primary-color);
+    padding: 4px 6px;
+    background-color: var(--primary-color);
+    border-radius: 3px;
+}
+
+.home-filter-information-receive-content-address>p{
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: var(--text-color);
+}
+
+.home-filter-information-receive-content-address>p::after{
+    content: "Mặc định";
+    border: 1px solid var(--primary-color);
+    margin-left: 10px;
+    box-sizing: border-box;
+    font-size: 1.3rem;
+    padding: 2px 4px;
+    border-radius: 2px;
+    color: var(--primary-color);
+
+}
+
 
 .modal-message{
     position: fixed;
@@ -116,4 +141,14 @@
     font-weight: 500;
    
     
+}
+.d-flex {
+    display: flex;
+
+}
+.j-center{
+    justify-content: center;
+}
+.a-center{
+    align-items: center;
 }
